<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Med+Pass Health</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">Register</string>
    <string name="register_email">University Email Address</string>
    <string name="register_agree">I accept this agreement</string>
    <string name="license_policies">License and Policies</string>
    <string name="title_activity_create_password">CreatePassword</string>
    <string name="contact_footer">844-MEDPASS or help@medpasshealth.com</string>
    <string name="title_activity_account_manage">Account</string>
    <string name="title_activity_emergency_contact">EmergencyContact</string>
    <string name="title_activity_contact_info">ContactInfo</string>
    <string name="title_activity_med_history">MedHistory</string>
    <string name="title_activity_verify_identity">VerifyIdentity</string>
    <string name="title_activity_recover_password">RecoverPassword</string>
    <string name="title_activity_signin">Sign In</string>
    <string name="title_activity_life">Life</string>
    <string name="title_activity_contact_personal">ContactPersonal</string>
    <string name="title_activity_contact_emergency">ContactEmergency</string>
    <string name="submit">Submit</string>
    <string name="confirm">Confirm</string>
    <string name="contnu">Continue…</string>
    <string name="title_activity_terms_of_use">TermsOfUse</string>
    <string name="title_activity_entering_semester">EnteringSemester</string>
    <string name="title_activity_main">MainActivity</string>

</resources>
